--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,9 +43,7 @@
             </div>
         </div>
         <div class="group">
-            <button >
-                Login
-              </button>
+            <input type="submit" value="Login" onclick="home"> 
         </div>
     </form>
       
