--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
 <body>
     
 <header>
-    <img class="image_login" src="https://lh3.googleusercontent.com/p/AF1QipP-xGgVIOL8Q-8xwDihf-ad7PUAiLKExTrGNw8=s1360-w1360-h1020" alt="image" height="300px" >
+    <img class="image_login" src="https://lh3.googleusercontent.com/p/AF1QipP-xGgVIOL8Q-8xwDihf-ad7PUAiLKExTrGNw8=s1360-w1360-h1020" alt="image" style="margin-top: 2% ;" height="300px" >
 </header>
 <div class="form_container">
     <div>
